IMPROVE: enable bootstrapv4 new rfs and make brand responsive.

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,5 @@
 $theme-colors: (
     "primary": #0047BB /* OVERRIDE PRIMARY WITH ABSOLUTE ZERO || https://coolors.co/0047bb */
 );
+
+$enable-responsive-font-sizes: true;
